--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,36 @@
 }
 
 .slider {
-    width: 80%;
-    height: 60%;
-    background-color: red;
+    width: 70%;
+    height: 50%;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
+    
 }
 
 .thumb {
+    width: 100%;
+    height: 20%;
+}
+
+.thumb-big {
+    width: 70%;
+    height: 100%;
+}
+
+.thumb-small {
     width: 30%;
-    height: 30%;
-    border: 1px solid black;
+    height: 100%;
+}
+
+.img-big {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.img-small {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
