--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
     box-sizing: border-box;
 }
 
-
-
 .container_principale {
     width: 100%;
     height: 100vh;
@@ -48,4 +46,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.arrow {
+    position: absolute; 
+    top: 0; 
+    
 }
